push scraping code from ipynb file

--- a/Missions_to_Mars/Missions_to_Mars.ipynb
+++ b/Missions_to_Mars/Missions_to_Mars.ipynb
@@ -1,6 +1,407 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mission to Mars"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### NASA Mars News"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dependencies\n",
+    "from bs4 import BeautifulSoup as bs\n",
+    "import pandas as pd\n",
+    "from splinter import Browser\n",
+    "import requests\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set Executable Path & Initialize Chrome Browser\n",
+    "executable_path = {'executable_path': 'chromedriver.exe'}\n",
+    "browser = Browser('chrome', **executable_path, headless=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# URL of page to be scraped, visit URL and set up BeautifulSoup parsing\n",
+    "news_url = 'https://mars.nasa.gov/news/'\n",
+    "browser.visit(news_url)\n",
+    "html = browser.html\n",
+    "soup = bs(html, \"html.parser\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How NASA's Perseverance Mars Team Adjusted to Work in the Time of Coronavirus \n",
+      "Like much of the rest of the world, the Mars rover team is pushing forward with its mission-critical work while putting the health and safety of their colleagues and community first.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find latest news title and paragraph text\n",
+    "article = soup.find('div', class_='list_text')\n",
+    "news_title = article.find('div', class_='content_title').text\n",
+    "news_p = article.find(\"div\", class_ =\"article_teaser_body\").text\n",
+    "print(news_title)\n",
+    "print(news_p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### JPL Mars Space Images - Featured Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# URL of page to be scraped, visit URL and set up BeautifulSoup parsing\n",
+    "image_url = 'https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars'\n",
+    "browser.visit(image_url)\n",
+    "html = browser.html\n",
+    "soup = bs(html, \"html.parser\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Navigate to the image URL by clicking the button using Splinter\n",
+    "browser.click_link_by_partial_text('FULL IMAGE')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.jpl.nasa.gov/spaceimages/images/mediumsize/PIA19324_ip.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Parse the code to find the path and combine with base url consstruct the full image URL\n",
+    "path = soup.find(class_='fancybox')['data-fancybox-href']\n",
+    "base_url = 'https://www.jpl.nasa.gov'\n",
+    "featured_image_url = base_url + path\n",
+    "print(featured_image_url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Mars Weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# URL of page to be scraped, visit URL and set up BeautifulSoup parsing\n",
+    "weather_url = 'https://twitter.com/marswxreport'\n",
+    "browser.visit(weather_url)\n",
+    "time.sleep(10)\n",
+    "html = browser.html\n",
+    "soup = bs(html, \"html.parser\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mars Weather\n",
+      "Mars Weather\n",
+      "@MarsWxReport\n",
+      "·\n",
+      "InSight sol 501 (2020-04-24) low -93.5ºC (-136.2ºF) high -4.3ºC (24.3ºF)\n",
+      "winds from the SW at 5.0 m/s (11.3 mph) gusting to 15.8 m/s (35.3 mph)\n",
+      "pressure at 6.70 hPa\n",
+      "2\n",
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the Tweet in the source code\n",
+    "results = soup.find('article')\n",
+    "mars_results = results.find_all('span', class_='css-901oao css-16my406 r-1qd0xha r-ad9z0x r-bcqeeo r-qvutc0')\n",
+    "for item in mars_results:\n",
+    "    print(item.text)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "InSight sol 501 (2020-04-24) low -93.5ºC (-136.2ºF) high -4.3ºC (24.3ºF)\n",
+      "winds from the SW at 5.0 m/s (11.3 mph) gusting to 15.8 m/s (35.3 mph)\n",
+      "pressure at 6.70 hPa\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Isolate the text needed using list comprehension\n",
+    "mars_weather = \"\"\n",
+    "for item in mars_results:\n",
+    "    if \"InSight\" in item.text:\n",
+    "        mars_weather = item.text\n",
+    "print(mars_weather)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Mars Facts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visit the Mars Facts webpage and use Pandas to scrape the table containing facts \n",
+    "facts_url = 'https://space-facts.com/mars/'\n",
+    "table = pd.read_html(facts_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 268,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Data</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mars Fact</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>Equatorial Diameter:</td>\n",
+       "      <td>6,792 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Polar Diameter:</td>\n",
+       "      <td>6,752 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Mass:</td>\n",
+       "      <td>6.39 × 10^23 kg (0.11 Earths)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Moons:</td>\n",
+       "      <td>2 (Phobos &amp; Deimos)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Orbit Distance:</td>\n",
+       "      <td>227,943,824 km (1.38 AU)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Orbit Period:</td>\n",
+       "      <td>687 days (1.9 years)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Surface Temperature:</td>\n",
+       "      <td>-87 to -5 °C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>First Record:</td>\n",
+       "      <td>2nd millennium BC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Recorded By:</td>\n",
+       "      <td>Egyptian astronomers</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               Data\n",
+       "Mars Fact                                          \n",
+       "Equatorial Diameter:                       6,792 km\n",
+       "Polar Diameter:                            6,752 km\n",
+       "Mass:                 6.39 × 10^23 kg (0.11 Earths)\n",
+       "Moons:                          2 (Phobos & Deimos)\n",
+       "Orbit Distance:            227,943,824 km (1.38 AU)\n",
+       "Orbit Period:                  687 days (1.9 years)\n",
+       "Surface Temperature:                   -87 to -5 °C\n",
+       "First Record:                     2nd millennium BC\n",
+       "Recorded By:                   Egyptian astronomers"
+      ]
+     },
+     "execution_count": 268,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert the table to a dataframe (rename columns, index to mars fact)\n",
+    "mars_table = table[0]\n",
+    "mars_table = mars_table.rename(columns = {0:'Mars Fact', 1:'Data'})\n",
+    "mars_table.set_index('Mars Fact', inplace=True)\n",
+    "mars_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save table to html file\n",
+    "mars_table.to_html('mars_table.html')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Mars Hemispheres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 301,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# URL of page to be scraped, visit URL and set up BeautifulSoup parsing\n",
+    "hemispheres_url = 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'\n",
+    "browser.visit(hemispheres_url)\n",
+    "html = browser.html\n",
+    "soup = bs(html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 302,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'Title': 'Cerberus Hemisphere Enhanced',\n",
+       "  'Image_URL': 'https://astrogeology.usgs.gov/cache/images/cfa62af2557222a02478f1fcd781d445_cerberus_enhanced.tif_full.jpg'},\n",
+       " {'Title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "  'Image_URL': 'https://astrogeology.usgs.gov/cache/images/3cdd1cbf5e0813bba925c9030d13b62e_schiaparelli_enhanced.tif_full.jpg'},\n",
+       " {'Title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "  'Image_URL': 'https://astrogeology.usgs.gov/cache/images/ae209b4e408bb6c3e67b6af38168cf28_syrtis_major_enhanced.tif_full.jpg'},\n",
+       " {'Title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "  'Image_URL': 'https://astrogeology.usgs.gov/cache/images/7cf2da4bf549ed01c17f206327be4db7_valles_marineris_enhanced.tif_full.jpg'}]"
+      ]
+     },
+     "execution_count": 302,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find all elements containing titles and URLs\n",
+    "items = soup.find_all('div', class_='item')\n",
+    "\n",
+    "# Create a list to hold information\n",
+    "hemisphere_image_urls = []\n",
+    "\n",
+    "# Set main URL\n",
+    "hemispheres_main_url = 'https://astrogeology.usgs.gov'\n",
+    "\n",
+    "#Loop through items\n",
+    "for item in items: \n",
+    "    #Exctact title\n",
+    "    title = item.find('h3').text\n",
+    "    #Find image URL\n",
+    "    image_url = item.find('a', class_='itemLink product-item')['href']\n",
+    "    #Visit image URL\n",
+    "    browser.visit(hemispheres_main_url + image_url)\n",
+    "    image_html = browser.html\n",
+    "    # Parse using BeautifulSoup\n",
+    "    soup = bs( image_html, 'html.parser')\n",
+    "    # Locate image URL\n",
+    "    image_url = hemispheres_main_url + soup.find('img', class_='wide-image')['src']\n",
+    "    #Append to list\n",
+    "    hemisphere_image_urls.append({\"Title\" : title, \"Image_URL\" : image_url})\n",
+    "\n",
+    "hemisphere_image_urls"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
